<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TriLegends v0.0</string>
    <string name="action_settings">设置</string>
    <string name="action_about">关于</string>
    <string name="action_exit">退出</string>
    <string name="about_text">Version 0.131225　圣诞节，剧情向前推进中</string>
    <string name="settings_text">此功能还在施工中*~*</string>
    <string name="main_activity_button">序章</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_text01">Text01Activity</string>
    <string name="title_activity_text02">Text02Activity
</string>
    <string name="title_activity_text03">Text03Activity</string>
    <string name="title_activity_text04">Text04Activity</string>
    <string name="title_activity_game01">Game01Activity</string>
    <string name="title_activity_parent">ParentActivity</string>
    <string name="title_activity_text05_1">Text05_1Activity</string>
    <string name="title_activity_text05_2">Text05_2Activity</string>
    <string name="title_activity_text05_3">Text05_3Activity</string>
    <string name="text01_1">第一节　活着的传说\n_____叹息沙漠夏天的阳光要比这个大陆任何地方的阳光都要毒辣，像是最接近太阳的地方的热度，加上从空间乱流里逸散辐射到空气中的混沌气息，人类的皮肤暴露在这样的环境里几个小时就会完全坏死，快速地变成灰色，失去知觉，脆化，变成沙一样的粉状，然后脱落下来，露出脆弱肤表下更加脆弱的红嫩肌肉。这个地方的盗匪对付叛徒的最常用办法，就是扒光他们的衣服，捆起来扔到正午的阳光下。据说，只有两个人在这样的刑罚里活了下来，他们一个是传说，另一个是活着的传说。\n____十三在一条夹在巨大沙丘之间的小路上快速地踏着小碎步向前走着，微微向前倾探着上身，把整张脸都隐匿在兜帽的阴影中，阴影里幽幽地亮着两点浅蓝色的淡淡光芒，那是幽能正充斥着眼球，此刻他眼中的世界完完全全像是沉浸在奇特化学药剂里，只剩下有些奇怪但是很美的浅蓝色。</string>
    <string name="text02_1">（灵魂视界－一段：将幽能充斥双眼后看到的幽蓝色世界，特殊目标都将以红色出现，可以用来辨别敌我，避开危险区域，发现陷阱，追踪目标）\n\n\n____据说上古天界时代，这片沙漠之下是与幽暗地域相通的，虽然现在已经无法考证那个时代这里是不是和现在一样是沙漠，是不是真的拥有一个魑魅横行的地下黑暗世界，但是现在这里的确会时不时出现大大小小的流沙陷坑，无论是人类还是沙兽落入陷坑都极难再挣脱出来。由于地表的沙是会缓慢流动的，所以很难去真正标记这些陷坑，并去避开，于是真正能在这片死域里活下去的人，无一不是经历过大生死，觉醒了人类某些被遗忘在血脉里的天赋的人。沙民觉醒的是能够辨清物体内部结构的听觉，而刺客们则拥有特殊的视觉。对于十三来说，这个随时会择人而噬的黄沙世界，在大多数时候，只是需要做这样两件事：开启灵魂视界，避开红色的区域。</string>
    <string name="text03_1">____在沙子上行走的时候，十三的背后是一阵阵奇怪的响声，声音不大，那是一大串用粗麻绳穿起来的圆滚滚的人头，绳子的这头围系在他的腰上。人头被穿插的方式十分血腥，麻绳先穿过了头颅的左眼然后从后脑的破洞穿出来，打上一个防止人头在绳子上滑动的硕大绳结，然后穿透下一颗头颅。人头串绳在地面上的长度有五六米的样子，每颗头颅上面的皮肤都已经差不多完全沙化变成飞灰，有些散乱的头发也开始大把大把地脱落，在沿路上散落着，然后随风飘走。头颅上能够作为他们血统的证明的印记随着皮肤的失去，暴露出来，眉心处形状各异，指甲大小的蓝色晶体，在阳光下反射着有些晦涩的光泽。\n____这些头颅的主人是一个巨大商队的某一侧翼的全部外围斥候，十三对这片绝域上讨生活的人的规矩与习惯十分了然，说是“割草”来纳投名状，“草”的份量和质量也要十足才行。越难生存的地方越崇尚力量，在十三眼里，深红公国那个巨大富足繁荣的国都和这片绝域也没什么区别。\n____又走了几百米的距离，和一个显露出来的流沙陷坑擦身而过，十三到了目的地。他把脚边地上的浅沙扫开，看到了两块看不出材质的板子并在一起。十三谨慎地站了上去，右脚轻轻抬起来，在他身体前侧的板子上用力踏了三下，稍作停顿，又在后面的板子上踏了一下。</string>
    <string name="text04_1">____突然间，脚下实在的踏地感消失了，他开始下坠，一双手从地下探出来握紧了他的脚踝。没有关闭的灵魂视界变成了完全的血红色，那是杀意与危险降临的预警。</string>
    <string name="text05_1">____很快，十三整个人陷在了两块板子下面的流沙里，保持着比较高的速度向下落着。这里似乎是个被人利用了的流沙陷坑，他保持着冷静，视界里的红色快速褪去，他戴上了从那些死掉的斥候身上拿到的之前只是绑在额头上的护目镜，接着激活了左臂内侧的袖剑，右臂轻震两颗丸状物则从右臂的机关释放出来，沿着袖管滑落到掌心，随时可用。\n____又下滑了一段距离，十三身处的下降通道似乎出现岔路，这时候一直紧紧抓着他双腿的那双手猛然发力，将他向某个方向用力一带，然后消失不见。\n____十三不再笔直地向下落，而是沿着一个倾斜的通道滑着，周身的沙量以一种很明显的速度在减少着，十三渐渐地可以看见通道的上壁，应该是比较常用的通道，壁面相对来说比较光滑，没有什么太突兀的突起与棱角了。\n____很快，他从脚下的方向看到了光亮，是那种火焰的光芒，光亮处在视界里越变越大，直到完全到了眼前。由于做了准备，他从通道滑出后，一个轻跃，很快就在地面上站稳了，顺便带出来人头绳串砸在地上，发出一阵令人不喜地闷响。\n____一个巨大的地下大厅出现在眼前，四周火把的光芒里，松松散散地站着很多人。</string>
    <string name="text05_2">____很快地，十三半个身子陷到了沙子，他疾速抽出了挂再后腰处的一把单刀，猛得转向身后大力甩手掷出，一声沉闷，单刀的刀刃完完全全插入了身后那串头颅中的一个，然后钉在地上，只剩下刀柄在外面。腰部麻绳传来的力量如期到来，止住他，不再坠下，十三此时很像那把单刀，只有一颗脑袋在地面之上了。\n____那双抓着他的手一时间有些松动，却没有再握紧，而是直接松开了，视界里的血红色随着那双手的离开缓慢褪去。十三从陷坑里爬出来，回到地面上，有些费事地把单刀拔起来，放回后腰的刀鞘里。\n____坑道里的沙子快速向地下流去，很快一条不算促狭亦不宽敞的向下通道显现出来。十三蹲下身，想了想，以一个方便防御的姿势进入了通道，顺势而下。这处通道应该是比较常用的，十三没有感觉到很强的摩擦感，也没有遇见突兀的棱角与突起。\n____接着，经过一个角度不小的转折，他从脚下的方向看到了光亮，是那种火焰的光芒，光亮处在视界里越变越大，直到完全到了眼前。由于做了准备，他从通道滑出后，一个轻跃，很快就在地面上站稳了，顺便带出来人头绳串砸在地上，发出一阵令人不喜地闷响。\n____一个巨大的地下大厅出现在眼前，四周火把的光芒里，松松散散地站着很多人。</string>
    <string name="text05_3">____十三眉头一皱，双腿挣扎了两下，没能挣开，整个人反而被完全带进流沙当中向下疾速坠落着。他没有再往腿部的肌肉增加力量，而是按一种特殊的方式扭了一下脚踝。下一瞬，视界里的血色愈发浓郁起来，一根黑色的纤细圆锥从右小腿内侧里面的机栝弹出，以脚踝为柄，形成了一把足以弑人的凶器。\n____圆锥弹出的时机恰到好处，把抓着十三左腿的那只手的前臂刺了个对穿。十三能感觉到对方的惊怒，与真正欲置他于死地的杀意，可是这些没有任何意义，刺客黑色的武器都是淬过毒，见血封喉的那种。十三控制着双腿，将圆锥拔出来再刺下，拔出来，再刺下……几个来回之后，十三已经感受不到对方的存在了。\n____下落的方向忽然出现了转折，十三发现身边的沙子开始变少，他发觉自己正身处一个类似地下通道的环境中。隐约从通道尽头的有些光亮照过来，没有理会从他脸边擦过的一团粘稠在一起的黑色的血液和沙子，他逐渐在下滑中调整着姿态，圆锥也收回到机栝中。\n____光亮处越来越明显，在视界里越变越大，直到完全到了眼前。由于做了准备，他从通道滑出后，一个轻跃，很快就在地面上站稳了，顺便带出来人头绳串砸在地上，发出一阵令人不喜地闷响。\n____一个巨大的地下大厅出现在眼前，四周火把的光芒里，松松散散地站着很多人。</string>
    <string name="text01_activity_button">灵魂视界</string>
    <string name="text02_activity_button">沙间行走</string>
    <string name="text03_activity_button1">前</string>
    <string name="text03_activity_button2">后</string>
    <string name="reset">重置</string>
    <string name="text04_activity_button1">顺其自然</string>
    <string name="text04_activity_button2">谨慎挣脱</string>
    <string name="text04_activity_button3">全力挣脱</string>


</resources>
