<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book_red"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Text04Activity" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:text="@string/text04_1"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/text04_activity_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text04_activity_button1" />

    <Button
        android:id="@+id/text04_activity_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text04_activity_button2" />

    <Button
        android:id="@+id/text04_activity_button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text04_activity_button3" />

</LinearLayout>
