<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book_blue"
    android:columnCount="1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Text03Activity" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="335dp"
        android:scrollbars="vertical"
        android:singleLine="false"
        android:text="@string/text03_1"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_activity_text03_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text03_activity_button1" />

    <Button
        android:id="@+id/button_activity_text03_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text03_activity_button2" />

    <Button
        android:id="@+id/button_activity_text03_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

</LinearLayout>